[package]
name = "gpio-test"
version = "0.1.0"
authors = ["NimbleArchitect <56797391+NimbleArchitect@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.11.3"
reqwest = "0.9.14"
#dotenv = "0.13.0"
#tokio = "0.1.18"
#futures = "0.1.21"
url = "2.1.0"
#hyper = "0.11"
#tokio-core = "0.1"
rust-ini = "0.13"
subprocess= "0.1.11"
