[package]
name = "gpiosentry"
version = "0.1.0"
authors = ["NimbleArchitect <56797391+NimbleArchitect@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.11"
reqwest = "0.9"
url = "2.1"
rust-ini = "0.13"
subprocess = "0.1"
env_logger = "0.7"
log = "0.4"
clap = "2"