[package]
name = "gpiosentry"
version = "0.1.0"
authors = ["NimbleArchitect <56797391+NimbleArchitect@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.14"
reqwest = { version = "0.11.13", features = ["blocking"] }
url = "2.3.1"
rust-ini = "0.18.0"
subprocess = "0.2.9"
env_logger = "0.9.3"
log = "0.4.17"
clap = "2.0"